--- a/package.json
+++ b/package.json
@@ -1,24 +1,9 @@
 {
   "name": "roblox-proxy",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Artex2345/roblox-proxy.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Artex2345/roblox-proxy/issues"
-  },
-  "homepage": "https://github.com/Artex2345/roblox-proxy#readme",
+  "type": "module",
   "dependencies": {
-    "express": "^5.1.0",
     "node-fetch": "^3.3.2"
   }
 }
